--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "sweetalert": "^2.1.2",
+    "terser": "^3.14.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
