--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-scripts": "4.0.3",
     "sweetalert": "^2.1.2",
     "terser": "^3.14.1",
+    "typewriter-effect": "^2.18.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
